<resources>
    <string name="app_name">Go Travel!</string>
    <string name="name">Name(s)</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="password_regex">^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[$@$!%*?&amp;_])[A-Za-z\\d$@$!%%*?&amp;_]{8,20}</string>
    <string name="login">Sign Up</string>
    <string name="sign_out">You are about to sign out. \n Do you want to continue?</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t you have an account? Sign Up!</string>
    <string name="empty_email">The email field is empty</string>
    <string name="unmatched_email">Please write a valid email</string>
    <string name="empty_password">The password field is empty</string>
    <string name="unmatched_password">Your password must contain at least one uppercase letter, one lowercase letter, one number and a special character [$@$!%*?&amp;_] and it must be at least 8 characters long</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="fill_all_fields">Please fill all the fields!</string>
    <string name="welcome">Welcome!</string>
    <string name="signing_out">Signing Out</string>
    <string name="continue_sign_up">Please check your data. Do you want to continue?</string>
    <string name="no">Cancel</string>
    <string name="yes">Ok</string>
    <string name="cart">Cart</string>
    <string name="initial_cart_size">0</string>
    <string name="buy">Add to cart</string>
    <string name="euro">€</string>
    <string name="changes_made">They were detected some changes in your cart. \n Do you want to save them?</string>
    <string name="deleted_items">Deleted Items</string>
    <string name="travel_key">Travel Key</string>
    <string name="price">Price: €</string>
    <string name="position_key">Position key</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="delete">X</string>
    <string name="cart_list_key">Cart List Key</string>
    <string name="addings">Number of addings</string>
    <string name="total">Total: €</string>
    <string name="pattern">0.00</string>
    <string name="token">Token key</string>
    <string name="error_auth">The password is not right or the user may not exist</string>
    <string name="no_order">Currently, there are no orders!</string>
    <string name="order_key">Order key</string>
    <string name="new_order">New Order</string>
</resources>
